src/parser/test/esprima/invalid-syntax/strict_assignment_private.js
function hello() { "use strict"; private = 1; }
